# Master_Ros

./: README.md
Manipulator/man_gazebo/: CMakeLists.txt  package.xml
Manipulator/man_gazebo/controller/: arm_controller_3dof.yaml  arm_controller_4dof.yaml  arm_controller_5dof.yaml  arm_controller_6dof.yaml
Manipulator/man_gazebo/launch/: arm_controller.launch  controller_utils.launch  logging_level.launch  main.launch  manipulator.launch  pub_tf.launch  replace_model.launch  replace_model2.launch
Manipulator/man_gazebo/urdf/: common.gazebo.xacro  full_manipulator.urdf.xacro  gazebo.xacro  (+6 more)
Manipulator/man_moveit/: CMakeLists.txt  package.xml
Manipulator/man_moveit/config/: chomp_planning.yaml  controllers_3dof.yaml  controllers_4dof.yaml  controllers_5dof.yaml  controllers_6dof.yaml  joint_limits.yaml  kinematics.yaml  manipulator.srdf  manipulator_3dof.srdf  manipulator_4dof.srdf  manipulator_5dof.srdf  manipulator_6dof.srdf  ompl_planning.yaml
Manipulator/man_moveit/config/archive/: controllers_3dof.yaml  controllers_5dof (copy).yaml  controllers_5dof.yaml  controllers_6dof (copy).yaml  joint_limits_6.yaml  manipulator.srdf  manipulator_3dof.srdf  manipulator_4dof.srdf  manipulator_6dof (copy).srdf  ompl_planning.yaml
Manipulator/man_moveit/launch/: 1ompl_planning_pipeline.launch.xml  chomp_planning_pipeline.launch.xml  man_moveit_controller_manager.launch.xml  man_moveit_planning_execution.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  trajectory_execution.launch.xml
(+58 files in other folders)
